--- a/src/components/AppointmentSection.astro
+++ b/src/components/AppointmentSection.astro
@@ -5,38 +5,24 @@
   <div class="auto-container">
     <div class="row clearfix">
       <!-- Title Column -->
-      <div class="title-column col-lg-10 col-md-12 col-sm-12">
+      <div class="title-column col-lg-9 col-md-8 col-sm-8">
         <div class="inner-column">
           <h3>Aprovecha la gran promoción de instalación</h3>
-          <p class="text-white">Por solo $60 $40 de nuestro plan Familiar con un total de 400M de internet + 88 canales de tv por $35 mensuales.</p>
+          <p class="text-white">
+            Por solo $60 $40 de nuestro plan Familiar con un total de 400M de
+            internet + 88 canales de tv por $35 mensuales.
+          </p>
         </div>
       </div>
 
       <!-- Form Column -->
-      <div class="form-column col-lg-2 col-md-12 col-sm-12">
-        <div class="inner-column">
-          <div class="appointment-form">
-            <form method="post" action="contact.html">
-              <div class="form-group">
-                <!-- <input
-                  type="email"
-                  name="email"
-                  value=""
-                  placeholder="Enter street address & apartment"
-                  required=""
-                /> -->
-                <button type="submit" class="theme-btn btn-style-two"
-                  ><span class="txt"
-                    >Ver promoción <i class="lnr lnr-arrow-right"
-                    ></i></span
-                  ></button
-                >
-              </div>
-            </form>
-          </div>
-        </div>
+      <div class="form-column pt-md-5 pt-lg-2 col-lg-3 col-md-4 col-sm-4 ">
+        <button type="submit" class="theme-btn btn-style-two"
+          ><span class="txt"
+            >Ver promoción <i class="lnr lnr-arrow-right"></i></span
+          ></button
+        >
       </div>
-      
     </div>
   </div>
 </section>
