--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -22,10 +22,10 @@
               400 megas de descarga y subida + 88 canales de TV por $35
             </div>
             <div class="icon">
-              <img src="images/icons/service-1.svg" alt="" />
+              <img src="images/icons/family.svg" alt="" />
             </div>
             <a class="services" href="services-detail.html"
-              >Get Broadband Service <span class="arrow lnr lnr-arrow-right"
+              >Ver servicio <span class="arrow lnr lnr-arrow-right"
               ></span></a
             >
           </div>
@@ -45,10 +45,10 @@
               100 megas de descarga y subida + 88 canales de TV por $30
             </div>
             <div class="icon">
-              <img src="images/icons/service-2.svg" alt="" />
+              <img src="images/icons/basic.svg" alt="" />
             </div>
             <a class="services" href="services-detail.html"
-              >Get Broadband Service <span class="arrow lnr lnr-arrow-right"
+              >Ver servicio <span class="arrow lnr lnr-arrow-right"
               ></span></a
             >
           </div>
@@ -68,10 +68,10 @@
               88 canales de televisión por tan solo 7,5$
             </div>
             <div class="icon">
-              <img src="images/icons/service-3.svg" alt="" />
+              <img src="images/icons/tv.svg" alt="" />
             </div>
             <a class="services" href="services-detail.html"
-              >Get Broadband Service <span class="arrow lnr lnr-arrow-right"
+              >Ver servicio <span class="arrow lnr lnr-arrow-right"
               ></span></a
             >
           </div>
@@ -99,10 +99,10 @@
               doeiumod Donec modern solution quam felis.
             </div>
             <div class="icon">
-              <img src="images/icons/service-2.svg" alt="" />
+              <img src="images/icons/briefcase.svg" alt="" />
             </div>
             <a class="services" href="services-detail.html"
-              >Get Broadband Service <span class="arrow lnr lnr-arrow-right"
+              >Ver servicio <span class="arrow lnr lnr-arrow-right"
               ></span></a
             >
           </div>
