--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,20 +28,21 @@ const { title } = Astro.props;
 	</head>
 	<body class="hidden-bar-wrapper">
 		<slot />
+		<ScrollToTop />
 	</body>
 </html>
 
-<script is:inline src="scripts/jquery.js"></script>
-<script is:inline src="scripts/popper.min.js"></script>
-<script is:inline src="scripts/bootstrap.min.js"></script>
-<script is:inline src="scripts/jquery.mCustomScrollbar.concat.min.js"></script>
-<script is:inline src="scripts/jquery.fancybox.js"></script>
-<script is:inline src="scripts/appear.js"></script>
-<script is:inline src="scripts/parallax.min.js"></script>
-<script is:inline src="scripts/tilt.jquery.min.js"></script>
-<script is:inline src="scripts/jquery.paroller.min.js"></script>
-<script is:inline src="scripts/owl.js"></script>
-<script is:inline src="scripts/wow.js"></script>
-<script is:inline src="scripts/nav-tool.js"></script>
-<script is:inline src="scripts/jquery-ui.js"></script>
-<script is:inline src="scripts/script.js"></script>
+<script is:inline src="/scripts/jquery.js"></script>
+<script is:inline src="/scripts/popper.min.js"></script>
+<script is:inline src="/scripts/bootstrap.min.js"></script>
+<script is:inline src="/scripts/jquery.mCustomScrollbar.concat.min.js"></script>
+<script is:inline src="/scripts/jquery.fancybox.js"></script>
+<script is:inline src="/scripts/appear.js"></script>
+<script is:inline src="/scripts/parallax.min.js"></script>
+<script is:inline src="/scripts/tilt.jquery.min.js"></script>
+<script is:inline src="/scripts/jquery.paroller.min.js"></script>
+<script is:inline src="/scripts/owl.js"></script>
+<script is:inline src="/scripts/wow.js"></script>
+<script is:inline src="/scripts/nav-tool.js"></script>
+<script is:inline src="/scripts/jquery-ui.js"></script>
+<script is:inline src="/scripts/script.js"></script>
