--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -129,8 +129,8 @@
 
 <style>
   .logo-box .logo img {
-    width: 100px;
-    height: 90px;
+    width: 70px;
+    height: auto;
   }
 
   .sticky-header .logo.pull-left a[href="#home"] img {
@@ -148,4 +148,5 @@
     display: flex;
     justify-content: flex-end;
   }
+
 </style>
