feat: hash navigation

--- a/src/components/FacilitySection.astro
+++ b/src/components/FacilitySection.astro
@@ -1,4 +1,4 @@
-<section class="facility-section" style="background-image: url(images/background/pattern-6.png)">
+<section id="galeria" class="facility-section" style="background-image: url(images/background/pattern-6.png)">
   <div class="auto-container">
     <!-- Sec Title -->
     <div class="sec-title">
