--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -1,4 +1,4 @@
-<section class="main-slider">
+<section id="inicio" class="main-slider">
   <div class="main-slider-carousel owl-carousel owl-theme">
     <div
       class="slide"
