--- a/src/components/PricingSection.astro
+++ b/src/components/PricingSection.astro
@@ -1,4 +1,5 @@
 <section
+  id="servicios"
   class="pricing-section"
   style="background-image: url(images/background/pattern-3.png); background-blend-mode: luminosity;"
 >
