--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -1,4 +1,5 @@
 <section
+  id="planes"
   class="services-section"
   style="background-image: url(images/background/pattern-2.png)"
 >
@@ -112,7 +113,7 @@
     <!-- End Upper Section -->
 
     <!-- Lower Section -->
-    <div class="lower-section">
+    <div id="panel" class="lower-section">
       <div class="row clearfix">
         <!-- Image Column -->
         <div class="image-column col-lg-6 col-md-12 col-sm-12">
