--- a/src/components/MainFooter.astro
+++ b/src/components/MainFooter.astro
@@ -1,4 +1,4 @@
-<footer class="main-footer">
+<footer id="contacto" class="main-footer">
   <div
     class="pattern-layer-one"
     style="background-image: url(images/background/pattern-12-new.png)"
