--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -27,7 +27,7 @@
       <div class="inner-container netsystem-header-menu">
         <div class="pull-left logo-box">
           <div class="logo">
-            <a href="#home"
+            <a href="#inicio"
               ><img src="images/netsystem-logo.png" alt="" title="" /></a>
           </div>
         </div>
@@ -63,18 +63,18 @@
                   <a href="#">Inicio</a>
                 </li>
                 <li class="dropdown">
-                  <a href="#">Planes</a>
+                  <a href="#planes">Planes</a>
                 </li>
                 <li class="dropdown">
-                  <a href="#">Panel de usuario</a>
+                  <a href="#panel">Panel de usuario</a>
                 </li>
                 <li class="dropdown">
-                  <a href="#">Galeria</a>
+                  <a href="#galeria">Galeria</a>
                 </li>
                 <li class="dropdown">
-                  <a href="#">Servicios</a>
+                  <a href="#servicios">Servicios</a>
                 </li>
-                <li><a href="#contact">Contacto</a></li>
+                <li><a href="#contacto">Contacto</a></li>
               </ul>
             </div>
           </nav>
@@ -117,7 +117,7 @@
     <nav class="menu-box">
       <div class="nav-logo">
         <!-- <a href="index.html"><img src="images/logo.png" alt="" title="" /></a> -->
-        <a href="#home"
+        <a href="#inicio"
         ><img src="images/netsystem-logo.png" alt="" title="" /></a>
       </div>
       <div class="menu-outer">
