style: hide mobile-nav-toggle

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -190,6 +190,10 @@
 		visibility:hidden;
 		opacity:0;
 	}
+
+	.sticky-header .netsystem-header-menu .mobile-nav-toggler {
+		display: none;
+	}
 	
 }
 
