--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -4,9 +4,7 @@
     <div class="auto-container clearfix">
       <div class="pull-left">
         <ul class="info">
-          <li>
-            Habilitación de CONTATEL Nº 00738
-          </li>
+          <li>Habilitación de CONTATEL Nº 00738</li>
         </ul>
       </div>
 
@@ -14,7 +12,10 @@
         <!-- Social Box -->
         <ul class="social-box">
           <li>
-            <a style="visibility: hidden" href="https://www.facebook.com/" class="fa fa-facebook-f"></a>
+            <a
+              style="visibility: hidden"
+              href="https://www.facebook.com/"
+              class="fa fa-facebook-f"></a>
           </li>
         </ul>
       </div>
@@ -28,7 +29,8 @@
         <div class="pull-left logo-box">
           <div class="logo">
             <a href="#inicio"
-              ><img src="images/netsystem-logo.png" alt="" title="" /></a>
+              ><img src="images/netsystem-logo.png" alt="" title="" /></a
+            >
           </div>
         </div>
         <div class="nav-outer clearfix">
@@ -74,7 +76,9 @@
                 <li class="dropdown" data-menu-item="servicios">
                   <a href="#servicios">Servicios</a>
                 </li>
-                <li><a href="#contacto" data-menu-item="contacto">Contacto</a></li>
+                <li>
+                  <a href="#contacto" data-menu-item="contacto">Contacto</a>
+                </li>
               </ul>
             </div>
           </nav>
@@ -91,7 +95,8 @@
       <!-- Logo -->
       <div class="logo pull-left">
         <a href="#home"
-        ><img src="images/netsystem-logo.png" alt="" title="" /></a>
+          ><img src="images/netsystem-logo.png" alt="" title="" /></a
+        >
       </div>
 
       <!--Right Col-->
@@ -105,7 +110,6 @@
           <span class="icon flaticon-menu"></span>
         </div>
       </div>
-
     </div>
   </div><!-- End Sticky Menu -->
 
@@ -118,7 +122,8 @@
       <div class="nav-logo">
         <!-- <a href="index.html"><img src="images/logo.png" alt="" title="" /></a> -->
         <a href="#inicio"
-        ><img src="images/netsystem-logo.png" alt="" title="" /></a>
+          ><img src="images/netsystem-logo.png" alt="" title="" /></a
+        >
       </div>
       <div class="menu-outer">
         <!--Here Menu Will Come Automatically Via Javascript / Same Menu as in Header-->
@@ -128,21 +133,25 @@
 </header>
 
 <script>
-  const listItems = document.querySelectorAll('#navbarSupportedContent ul li.dropdown');
+  const listItems = document.querySelectorAll(
+    "#navbarSupportedContent ul li.dropdown"
+  );
 
   listItems.forEach((item) => {
-    item.addEventListener('click', () => {
-      const elements = document.querySelectorAll(`[data-menu-item="${item.dataset.menuItem}"]`)
+    item.addEventListener("click", () => {
+      const elements = document.querySelectorAll(
+        `[data-menu-item="${item.dataset.menuItem}"]`
+      );
 
       listItems.forEach((li) => {
-        li.classList.remove('current');
+        li.classList.remove("current");
       });
-      
+
       elements.forEach((element) => {
-        element.classList.add('current');
-      })
-          })
-  })
+        element.classList.add("current");
+      });
+    });
+  });
 </script>
 
 <style>
@@ -167,4 +176,10 @@
     justify-content: flex-end;
   }
 
+  @media only screen and (min-width: 768px){
+	.sticky-header .netsystem-header-menu .mobile-nav-toggler {
+		display: none;
+	}
+	
+}
 </style>
