--- a/src/components/ServicesSection.astro
+++ b/src/components/ServicesSection.astro
@@ -121,7 +121,7 @@
             <div class="color-layer"></div>
             <div class="border-layer"></div>
             <div class="image">
-              <img src="images/resource/service-1.png" alt="" />
+              <img src="images/services/family.png" alt="" />
             </div>
           </div>
         </div>
