--- a/src/components/MainSection.astro
+++ b/src/components/MainSection.astro
@@ -1,9 +1,9 @@
 <section id="inicio" class="main-slider">
   <div class="main-slider-carousel owl-carousel owl-theme">
     <div
-      class="slide"
-      style="background-image: url(images/main-slider/slider_1.jpg)"
+    class="slide"
     >
+    <!-- style="background-image: url(images/main-slider/slider_1.jpg)" -->
       <div
         class="pattern-layer"
         style="background-image: url(images/main-slider/pattern-layer.png)"
@@ -17,8 +17,8 @@
         <div class="content-boxed">
           <div class="inner-box">
             <!-- <div class="title">Nextbit Internet & TV</div> -->
-            <h1>Ultimate control of your internet</h1>
-            <p class="text-white lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, itaque!</p>
+            <h1>Baja latencia en tus servicios de streaming</h1>
+            <p class="text-white lead">Navegación 100% fluida, estable e ilimitada, con más de 80 canales de televisión vía fibra, con soporte técnico los 7 días de la semana</p>
 
             <!-- <div class="btns-box">
               <a href="about.html" class="theme-btn btn-style-two"
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <div
+    <!-- <div
       class="slide"
       style="background-image: url(images/main-slider/slider_2.jpg)"
     >
@@ -46,17 +46,16 @@
         style="background-image: url(images/main-slider/pattern-layer.png)"
       >
       </div>
-      <!-- <div class="color-layer-one"></div>
+      <div class="color-layer-one"></div>
       <div class="color-layer-two"></div>
-      <div class="color-layer-three"></div> -->
+      <div class="color-layer-three"></div>
       <div class="auto-container">
-        <!-- Content Boxed -->
         <div class="content-boxed">
           <div class="inner-box">
-            <!-- <div class="title">Nextbit Internet & TV</div> -->
+            <div class="title">Nextbit Internet & TV</div>
             <h1>Ultimate control of your internet</h1>
             <p class="text-white lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, itaque!</p>
-            <!-- <div class="btns-box">
+            <div class="btns-box">
               <a href="about.html" class="theme-btn btn-style-two"
                 ><span class="txt"
                   >Read More <i class="lnr lnr-arrow-right"></i></span
@@ -67,10 +66,35 @@
                   >Contact Now <i class="lnr lnr-arrow-right"></i></span
                 ></a
               >
-            </div> -->
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </section>
+
+<style>
+  #inicio .main-slider-carousel .slide {
+    background-image: url(images/main/streaming-desktop.jpg);
+    background-position: center;
+  }
+
+  @media only screen and (max-width: 479px) {
+    #inicio .main-slider-carousel .slide {
+      background-image: url(images/main/streaming-phone.jpg);
+    }
+  }
+
+  @media only screen and (min-width: 768px){
+    #inicio .main-slider-carousel .slide {
+      background-image: url(images/main/streaming-tablet.jpg);
+    }
+  }
+
+  @media only screen and (max-width: 1140px){
+    #inicio .main-slider-carousel .slide {
+      background-image: url(images/main/streaming-desktop.jpg);
+    }
+  }
+</style>
