style: gallery images, fix panel styles

--- a/src/components/FacilitySection.astro
+++ b/src/components/FacilitySection.astro
@@ -22,9 +22,9 @@
             
             <!-- Facility Block -->
             <div class="facility-block col-lg-6 col-md-6 col-sm-12">
-              <div class="inner-box">
-                <!-- <div class="pattern-layer" style="background-image: url(images/background/pattern-14.png)"></div>
-                <div class="icon-box flaticon-swimming-pool"></div>
+              <div class="inner-box" style="background-image: url(images/gallery/technicians.jpg); background-size: cover">
+                <div class="pattern-layer" ></div>
+                <!--  <div class="icon-box flaticon-swimming-pool"></div>
                 <h5><a href="services-detail.html">Free Installation</a></h5>
                 <div class="text">Lorem ipsum dolor sit amet them consec tetur elit sed do eiumod. Donec quam felis ies nec.</div> -->
               </div>
@@ -32,7 +32,7 @@
             
             <!-- Facility Block -->
             <div class="facility-block col-lg-6 col-md-6 col-sm-12">
-              <div class="inner-box">
+              <div class="inner-box" style="background-image: url(images/gallery/office.jpg); background-size: cover">
                 <!-- <div class="pattern-layer" style="background-image: url(images/background/pattern-14.png)"></div>
                 <div class="icon-box flaticon-5g"></div>
                 <h5><a href="services-detail.html">Ultrafast Connect</a></h5>
@@ -42,7 +42,7 @@
             
             <!-- Facility Block -->
             <div class="facility-block col-lg-6 col-md-6 col-sm-12">
-              <div class="inner-box">
+              <div class="inner-box" style="background-image: url(images/gallery/equipment.jpg); background-size: cover">
                 <!-- <div class="pattern-layer" style="background-image: url(images/background/pattern-14.png)"></div>
                 <div class="icon-box flaticon-8k"></div>
                 <h5><a href="services-detail.html">4K and 8K Quality</a></h5>
@@ -52,7 +52,7 @@
             
             <!-- Facility Block -->
             <div class="facility-block col-lg-6 col-md-6 col-sm-12">
-              <div class="inner-box">
+              <div class="inner-box" style="background-image: url(images/gallery/experts.jpg); background-size: cover">
                 <!-- <div class="pattern-layer" style="background-image: url(images/background/pattern-14.png)"></div>
                 <div class="icon-box flaticon-customer-service"></div>
                 <h5><a href="contact.html">Fast Support 24/7</a></h5>
@@ -69,7 +69,7 @@
         <div class="inner-column">
           <div class="pattern-layer"></div>
           <div class="image wow slideInRight" data-wow-delay="0ms" data-wow-duration="1500ms">
-            <img src="images/resource/facility.png" alt="" />
+            <img src="images/gallery/main-image.png" alt="" />
           </div>
         </div>
       </div>
