style: company logo

--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -177,9 +177,26 @@
   }
 
   @media only screen and (min-width: 768px){
+  .logo-box .logo img {
+    width: 110px;
+  }
+
+  .sticky-header .logo.pull-left a[href="#home"] img {
+    width: 95px;
+    height: auto;
+  }
 	.sticky-header .netsystem-header-menu .mobile-nav-toggler {
 		display: none;
 	}
-	
+}
+
+@media only screen and (max-width: 1340px){
+  .logo-box .logo img {
+    width: 130px;
+  }
+
+  .sticky-header .logo.pull-left a[href="#home"] img {
+    width: 105px;
+  }
 }
 </style>
