refactor: set title

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import SearchPopup from "../components/SearchPopup.astro";
 import MapSection from "../components/MapSection.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Netsystem">
   <main>
     <div class="page-wrapper">
       <!-- Preloader -->
