--- a/src/components/MapSection.astro
+++ b/src/components/MapSection.astro
@@ -1,7 +1,7 @@
 <section class="map-section">
   <iframe
     class="map"
-    title="Mapa de ubicación de Avila Multisport"
+    title="Mapa de ubicación de Netsystems"
     src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31385.916957960602!2d-66.82160975000001!3d10.48176725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sve!4v1706543997428!5m2!1ses!2sve"
     style="border:0;"
     allowfullscreen={false}
