--- a/src/components/MapSection.astro
+++ b/src/components/MapSection.astro
@@ -2,24 +2,23 @@
   <iframe
     class="map"
     title="Mapa de ubicación de Netsystems"
-    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d31385.916957960602!2d-66.82160975000001!3d10.48176725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sve!4v1706543997428!5m2!1ses!2sve"
+    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7822.045489105278!2d-69.6692777!3d11.4058941!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e842b6d0960b3cd%3A0xbcf6c530d58661ca!2sTV%20Cable%20Net%20Systems%20C.A.!5e0!3m2!1ses!2sve!4v1720810630344!5m2!1ses!2sve"
     style="border:0;"
     allowfullscreen={false}
     loading="lazy"
-    referrerpolicy="no-referrer-when-downgrade"
-  ></iframe>
+    referrerpolicy="no-referrer-when-downgrade"></iframe>
   <!-- <div class="auto-container">
   </div> -->
 </section>
 
 <style>
-.map-section {
-  min-height: 856px;
-  margin-bottom: -34.5vh;
-}
+  .map-section {
+    min-height: 856px;
+    margin-bottom: -34.5vh;
+  }
 
-.map {
-  width: 100%;
-  height: 856px;
-}
+  .map {
+    width: 100%;
+    height: 856px;
+  }
 </style>
