--- a/src/components/PaymentSection/_styles.module.css
+++ b/src/components/PaymentSection/_styles.module.css
@@ -114,6 +114,7 @@
 
 .paymentSec__main {
   width: min(600px, calc(100% - 50px));
+  padding-bottom: 2rem;
   margin: 0 auto;
 
   display: flex;
@@ -194,6 +195,12 @@
 .input_wrapper {
   display: flex;
   flex-direction: column;
+}
+
+.label {
+  margin: 0 0 0 8px;
+  color: #0b94b8;
+  font-weight: 600;
 }
 
 .input {
