--- a/src/components/PaymentSection/_styles.module.css
+++ b/src/components/PaymentSection/_styles.module.css
@@ -151,14 +151,13 @@
 }
 
 .paymentSec__form__error {
-  margin-bottom: 1rem;
-  text-align: center;
+  margin-bottom: 2rem;
   font-weight: 600;
   color: #df0b33;
 
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   gap: 0.25rem;
 }
 
