fix: add client:only=react on PaymentSection

--- a/src/components/PaymentSection.astro
+++ b/src/components/PaymentSection.astro
@@ -3,5 +3,5 @@ import PaymentWrapper from "./PaymentSection/PaymentWrapper";
 ---
 
 <section class="payment-section">
-  <PaymentWrapper client:load />
+  <PaymentWrapper client:only="react"/>
 </section>
