--- a/src/components/MainFooter.astro
+++ b/src/components/MainFooter.astro
@@ -45,9 +45,9 @@
   <!-- Footer Bottom -->
   <div class="footer-bottom">
     <div class="auto-container">
-      <div class="copyright">
-        © 2024 Tv Cable Net Systems. All Rights Reserved. Maded By
-        <img src="images/novanet-logo.svg" alt="">
+      <div class="copyright">    
+        TV Cable Net Systems. Derechos reservados ® {new Date().getFullYear()} | Publicado por 
+        <a href="https://novanet.studio/" target="_blank"><img src="images/novanet-logo.svg" alt=""></a>
       </div>
     </div>
   </div>
