--- a/src/components/PaymentSection/_styles.module.css
+++ b/src/components/PaymentSection/_styles.module.css
@@ -1,7 +1,9 @@
 .paymentSec__wrapper {
-  width: min(1440px, 100%);
+  width: 100%;
   min-height: 758px;
   margin: 0 auto;
+
+  background: url("images/background/2.jpg") center/cover no-repeat;
 
   display: grid;
   grid-template-columns: 300px 1fr 300px;
@@ -12,7 +14,7 @@
   position: relative;
 
   height: 100%;
-  min-width: 300px;
+  width: 300px;
 }
 
 .paymentSec__steppIndicator {
@@ -423,7 +425,11 @@ select.input {
 
 @media (max-width: 1280px) {
   .paymentSec__wrapper {
-    grid-template-columns: 300px 1fr;
+    grid-template-columns: 200px 1fr 200px;
+  }
+
+  .paymentSec__banner {
+    width: 200px;
   }
 }
 
