fix: add react compiler options

--- a/src/components/PaymentSection.astro
+++ b/src/components/PaymentSection.astro
@@ -1,5 +1,5 @@
 ---
-import PaymentWrapper from "./PaymentSection/PaymentWrapper";
+import PaymentWrapper from "./react/PaymentWrapper";
 ---
 
 <section class="payment-section">
