--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,8 @@
 @import url('jquery.fancybox.min.css');
 @import url('jquery.mCustomScrollbar.min.css');
 
+@import url('_styles.css');
+
 /*** 
 
 ====================================================================
