fix: rename react components folder

--- a/src/components/MainFooter.astro
+++ b/src/components/MainFooter.astro
@@ -1,18 +1,18 @@
 <footer id="contacto" class="main-footer">
   <div
     class="pattern-layer-one"
-    style="background-image: url(images/background/pattern-12-new.png)"
+    style="background-image: url(/images/background/pattern-12-new.png)"
   >
   </div>
   <div
     class="pattern-layer-two"
-    style="background-image: url(images/background/pattern-13-new.png)"
+    style="background-image: url(/images/background/pattern-13-new.png)"
   >
   </div>
   <div class="auto-container">
     <div class="widgets-section">
       <div class="logo">
-        <a href="index.html"><img src="images/netsystem-logo.png" alt="" /></a>
+        <a href="index.html"><img src="/images/netsystem-logo.png" alt="" /></a>
       </div>
       <h4 class="footer-message">Envíanos un mensaje por WhatsApp</h4>
       <ul class="contact-info-list">
