--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -70,8 +70,8 @@
                 <li class="dropdown" data-menu-item="panel">
                   <a href="/#panel">Panel de usuario</a>
                 </li>
-                <li class="dropdown" data-menu-item="reporte-pago">
-                  <a href="/reporte-pago">Pago C2P</a>
+                <li class="dropdown" data-menu-item="payment">
+                  <a href="payment">Pago C2P</a>
                 </li>
                 <li class="dropdown" data-menu-item="galeria">
                   <a href="/#galeria">Galeria</a>
