--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,9 +18,9 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/logo.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
-		<link href="css/bootstrap.css" rel="stylesheet" />
-		<link href="css/style.css" rel="stylesheet" />
-		<link href="css/responsive.css" rel="stylesheet" />
+		<link href="/css/bootstrap.css" rel="stylesheet" />
+		<link href="/css/style.css" rel="stylesheet" />
+		<link href="/css/responsive.css" rel="stylesheet" />
 		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 		<!-- Responsive -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
