fix: netlify compilation error

--- a/src/components/c2p-membership/MembershipInfo.astro
+++ b/src/components/c2p-membership/MembershipInfo.astro
@@ -1,5 +1,5 @@
 ---
-import { c2pMembership } from "../../data/c2p-membership";
+import { c2pMembership } from "../../utils/c2p-membership";
 
 let source: Netsystems.c2pMembershipInfo[] = c2pMembership;
 ---
