--- a/src/pages/c2p.astro
+++ b/src/pages/c2p.astro
@@ -14,7 +14,7 @@ import MembershipInfo from "../components/c2p-membership/MembershipInfo.astro";
   <main>
     <div class="page-wrapper">
       <!-- Preloader -->
-      <!-- <Preloader /> -->
+      <Preloader />
       <!-- End Preloader -->
 
       <!-- Main Header -->
