add: images on c2p.astro

--- a/src/components/c2p-membership/Hero.astro
+++ b/src/components/c2p-membership/Hero.astro
@@ -16,8 +16,7 @@
     min-height: 500px;
     margin: 0 auto;
 
-    background: url("images/c2p-membership/cable-net-systems-afiliacion-otp.webp")
-      center/cover no-repeat;
+    background: url(/images/c2p-membership/hero.webp) center/cover no-repeat;
 
     display: flex;
     align-items: center;
