--- a/src/components/c2p-membership/Info.astro
+++ b/src/components/c2p-membership/Info.astro
@@ -6,7 +6,7 @@
         <div class="color-layer"></div>
         <div class="border-layer"></div>
         <div class="image">
-          <img src="images/services/family.png" alt="" />
+          <img src="/images/c2p-membership/ast-1.png" alt="" />
         </div>
       </div>
     </div>
@@ -36,7 +36,7 @@
         <div class="color-layer"></div>
         <div class="border-layer"></div>
         <div class="image">
-          <img src="images/services/family.png" alt="" />
+          <img src="/images/c2p-membership/ast-2.png" alt="" />
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
     bottom: -10px;
     right: 60px;
     height: 100%;
-    background: url(../images/resource/service-pattern-layer-new.png) no-repeat;
+    background: url(/images/resource/service-pattern-layer-new.png) no-repeat;
     background-size: cover;
   }
 
@@ -110,8 +110,7 @@
     bottom: -10px;
     right: 60px;
     height: 100%;
-    background: url(../images/resource/service-pattern-layer-new-1.png)
-      no-repeat;
+    background: url(/images/resource/service-pattern-layer-new-1.png) no-repeat;
 
     background-size: cover;
   }
@@ -123,7 +122,7 @@
     right: 35px;
     top: -17px;
     z-index: 1;
-    background: url(../images/resource/service-border-layer-new.png) no-repeat;
+    background: url(/images/resource/service-border-layer-new.png) no-repeat;
     background-size: cover;
   }
 
