--- a/src/components/MainHeader.astro
+++ b/src/components/MainHeader.astro
@@ -28,9 +28,9 @@
       <div class="inner-container netsystem-header-menu">
         <div class="pull-left logo-box">
           <div class="logo">
-            <a href="#inicio"
-              ><img src="images/netsystem-logo.png" alt="" title="" /></a
-            >
+            <a href="/"
+              ><img src="/images/netsystem-logo.png" alt="" title="" />
+            </a>
           </div>
         </div>
         <div class="nav-outer clearfix">
@@ -70,8 +70,8 @@
                 <li class="dropdown" data-menu-item="panel">
                   <a href="/#panel">Panel de usuario</a>
                 </li>
-                <li class="dropdown" data-menu-item="payment">
-                  <a href="payment">Pago C2P</a>
+                <li class="dropdown">
+                  <a href="/payment?">Pago C2P</a>
                 </li>
                 <li class="dropdown" data-menu-item="galeria">
                   <a href="/#galeria">Galeria</a>
@@ -98,7 +98,7 @@
       <!-- Logo -->
       <div class="logo pull-left">
         <a href="#home"
-          ><img src="images/netsystem-logo.png" alt="" title="" /></a
+          ><img src="/images/netsystem-logo.png" alt="" title="" /></a
         >
       </div>
 
@@ -125,7 +125,7 @@
       <div class="nav-logo">
         <!-- <a href="index.html"><img src="images/logo.png" alt="" title="" /></a> -->
         <a href="#inicio"
-          ><img src="images/netsystem-logo.png" alt="" title="" /></a
+          ><img src="/images/netsystem-logo.png" alt="" title="" /></a
         >
       </div>
       <div class="menu-outer">
