--- a/src/pages/c2p.astro
+++ b/src/pages/c2p.astro
@@ -10,7 +10,7 @@ import Info from "../components/c2p-membership/Info.astro";
 import MembershipInfo from "../components/c2p-membership/MembershipInfo.astro";
 ---
 
-<Layout title="Netsystem">
+<Layout title="Netsystem | Afiliación a pago C2P">
   <main>
     <div class="page-wrapper">
       <!-- Preloader -->
